Empty out #64 which had not been reviewed

--- a/paper_reviews/#2.md
+++ b/paper_reviews/#2.md
@@ -39,7 +39,7 @@
 
 ==+== C. Paper summary
 
-Prof. Onor Mutlu gave a captivating broad summary of the current bottleneck (due to data-heavy operations) in computer architecture and explained the change of paragdism that this happening from processor-centric to data-centric designs. The end goal is still the same : saving-up on energy, faster computations. He presented a few of the solutions that he has been working on, focusing on data-centric architectures.
+Prof. Onor Mutlu gave a broad summary of the data-heavy operations bottleneck in computer architecture. He explained the change of paradigm that is happening from processor-centric to data-centric designs. The end goal is still the same : saving-up on energy, faster computations. He presented a few of the solutions that he has been working on, focusing on data-centric architectures.
 
 He vastly expanded on the memory bottleneck and a few of the introduced solutions have already made their way onto the market or are being worked on and improved at the time being. As the density of DRAM increases, the reliability decreases on the other hand which is why we need to revisit the previous design and processing the data where it makes the most sense, as imagined years ago in A logic in memory IEEE 1970). 
 
