--- a/paper_reviews/#64.md
+++ b/paper_reviews/#64.md
@@ -25,7 +25,7 @@
 ==-==    5. Strong accept
 ==-== Enter the number of your choice:
 
-2
+5
 
 ==+== B. Reviewer expertise
 ==-== Choices:
@@ -39,20 +39,59 @@
 
 ==+== C. Paper summary
 
+Programs are written and run sequentially on so-called sequential computers. However, the gain in performance is decreasing as the programs get longer. The multiprocessors era's goal is to execute sequential programs on several processors at a time, splitting the workload and the memory banks at the same time.
+
+The challenge is to guarantee identical executions and end results each time the program is run. This is increasingly difficult as the ordering between operation (memory fetches and stores to any cell) matters to computing operations, and number of processors in a system increase.
+
+The term sequentially consistent, introduced in this essay, means that a sequential execution on a single processor should yield the same output as a multiple cores execution.
+
+With a set of two rules, (R1) each processor issues memroy requests in the order specified by its program and (R2) memory requests to a module are serviced by a FIFO buffer, it is shown that this sequential consistency can be achieved.
+
+Conclusion is twofold: verifying the correctness of execution is a burden and multiprocessors programming should be done at the lowest level to achieve best performance.
 
 ==+== D. Comments for author
 
+This is an informative note about sequential consistency, and illustrates well the problem with critical section that it is trying to solve in order to achieve true "parallel sequential" execution.
+
+As it is a very brief explanation, there's no order of magnitude computations involved (ie. slowdowns due to R1 and R2, or speedup by servicing store/load not using FIFO order)
+
+We could also mention memory barriers, but the added-value is excluded as in we only consider inter-processor communication done through memories.
+
 # Strength
 
--
+- Sequential consistency for critical sections
+- Mention of other possible improvements to presented protocol
+- Brief but concise
 
 # Weaknesses
 
--
+- Lacks a proper conclusion
 
 ==+== E. Comments for PC
 ==-== Hidden from authors.
 
 ==+== Scratchpad (for unsaved private notes)
 
+large sequential computers exeecute operations in a different order than the one specifiedby the program
+
+multiprocessor computer a correct execution by each processor does not guarantee the correct execution of the entire program
+
+squentially consisten 
+-> the result of any execution is the same as it it were executed sequentially
+
+interconnecting sequential processors wth memroy modules that insures the sequential consistency of the reulting multiproessor.
+
+
+computer consists of a collectio of processors and memroy modules
+
+operations of cencoern are the fetch store req to mem
+
+critical section -> only one process is executing it aat any time
+
+to minimize waiting, a processor can issue a store request without specifying the value to be stored
+
+R2: memroy requests from all processors issued to an individual memory module are serviced from asingle FIFO queue
+R1:Each processor issues memroy requests in the order specified by its program
+
+if FIFO contains a store with non received data, the memroy is idle. R2 can be weakened to allow the memory module to service other requests (not in the same memroy cell)
 ==+== End Review
