--- a/paper_reviews/#26.md
+++ b/paper_reviews/#26.md
@@ -39,14 +39,44 @@
 
 ==+== C. Paper summary
 
-(written in )
+(written in 1968)
+
+The upcoming bottleneck for computer engineering resides in where the data is computed. As the processor's gates scale down and speed will increase, the traditional von Neumann architecture will have a congestion node between the data holding resources (memory) and the computing unit.
+
+The author presents a design in which main memories act as extended cache to which the main processing unit can relay instructions for in-memory computing. This would hide the latency to access slower memories, enabling high speed buffers. He proposes several new instructions that could be issued to remote caches (search on mask equality, masked threshold
+copy tag bit, sector ADD/Scale..) to take advantage of the data-locality for certain types of operations (ie. matrix multiplications).
+
+Going forward, we need to improve the programs to instruct them on where to compute the data: distinguishing applications that require high-speed memories and those not affected by conventional slower ones. Lessons need to be learned on how to approach an efficient foreseeing of data movement to not hinder performances.
 
 ==+== D. Comments for author
 
 
 
 ==+== E. Comments for PC
+
 ==-== Hidden from authors.
+
+The essay is well structured and shows that computer scientists were aware of this memory computing possibility decades ago.
+There is a strong emphasis on the challenges such a system would imply.
+
+It is important that as few as possible control commands are sent ahead to help the cache to organize its data, which would otherwise reduce the benefit of this logic-in-memory.
+
+An understated point is the inefficiency of floating-point computation and how optimizing data-storage in relation to the types could fasten the computations.
+
+I would propose an array of memories where each unit is specialized in a certain type of data (2s complement, floating-point, fixed-point), but with a varying mantissa-exponent / fractional size. Large-scale bulk operations would hence be beneficial for much more applications. This would on the other hand complexify the control logic to decide which memory to use, and also require additional delay/conversion loss when transferring data somewhere else. However the in-memory logic could benefit of streamlined, precise arithmetics even more at the cost of making compiler's and programmer's job much harder. Ultimately this depends on the technology used to store the data, the added overhead and how fast the new system becomes. Which means that there's still a lot of work ahead of us!
+
+The conclusion summarizes very well the tight-coupling between programs and the architecture they run on: keep it as simple as possible. As much as we can improve each block, we as programmers are piloting its actions and those need to be easy to comprehend in order to reach maximum performances of any system.
+
+# Strength
+
+- Idea that "remote" cache can be invisible to program
+- Ballpark figures to appreciate the gains
+- Visionary essay
+
+# Weaknesses
+
+- Requires an independent mechanism to transfer data in the cache as necessary (today's prefetching)
+- On what should we concentrate efforts to achieve logic-in-memory? Vague conclusion
 
 ==+== Scratchpad (for unsaved private notes)
 
