--- a/paper_reviews/#1.md
+++ b/paper_reviews/#1.md
@@ -39,15 +39,64 @@
 
 ==+== C. Paper summary
 
+This is a talk from Richard Hamming at a Bells Labs seminar. Richard shares observations he witnessed across his years at Bells Labs, and specifically teaches the audience what is the difference between doing nobel-worthy class work and regular great work.
 
+It is a mix of field-tested advices and remarks that go a long way to motivate us in our daily research to reach this level. A good scientist doesn't only excel in pure technicality, but is also ears-open, a proliferous literate fellow that strives to keep improving. Struggling is part of the journey, and in the long run what makes the reward so satisfying. He also mentions the importance of being in a collaborative fruitful environment and to not fight but rather embrace it for highest impact.
+
+Ultimately one should know why he is involved in research, but for truly nobel-class and revolutionizing work, passion is also a deciding factor. At the cost of sometimes neglecting other aspects of your life, but dedicating your life for the greater good. Thriving for the highest-quality is not achieved by being born a genius nor luck, but rather by constant small improvements and dedication that triggers your inner both.
+
+To conclude, this is a motivational speech that illustrates the payoffs that can be reached for being clear about your ambitions and not only pursuing a dream, but working towards turning it into reality.
 
 ==+== D. Comments for author
 
+This is a speech that I very much agree with, and will definitely come back to read once or twice in year. It is very difficult for someone to ask the question: Is the research that I am working on worth it?, because it boils down to your own interest and there's no point in working on something that doesn't excite you.
 
+Best research is not performed when young: best research is performed when an individual as the strongest drive and the feeling that *anything* can be achieved with a strong willpower. That along with not being yet impacted by life hazards, administrative snags, or whatever is what makes us feel that the best research is performed when young.  
+
+Burnout of overpressure imposed by a manager, lab head, is however very real. Movies like Whiplash (2014) illustrate this in an elegant manner. Fleeing a toxic environment should not be frowned upon, as disregarding uninterested or disregarding colleagues should not be seen negatively. It is up to you to create your best environment but to also understand that what you perceive as the best, less stressful can not be the most ideal conditions to reach better than great work.
+
+Steering your own research towards your field's biggest interests, or at least not closing doors is however of the upmost importance. Not doing this could result in lack of funding, being disregarded by your peers, not listened to (John Turkey's example) when *sometimes* a slight show of interest or simple questioning can lead to magnitude higher impacts. Hence the need to foresee your field's bottlenecks.
+
+Some quotation from the speech that I was very found of:
+- It is a poor workman who blames his tools - the good man gets on with the job, given what he's got, and gets the best answer he can
+- Embrace your environnement, however it impacts you, and get the best out of it
+- don't be a back room scientist
+- If what you are doing is not important, and if you don't thin that it leads to something important, then why are you at Bells Labs working on it?
+
+# Strength
+
+- Highly motivational!
+- Enumerations of conditions for an individual to be productive
+- Illustrations with lots of examples
+- Teaches us to work with our tools, not against them
+- Factors in luck, and genius are not born nobel
+
+# Weaknesses
+
+- Hard work always pays off but is also often synonym of burning out if never rewarded
+- Lots of self-bias due to an extremely fruitful environment
+- How to push less brilliant scientists to become great scientists?
+- Should all of the work be for nobel-class? Can it?
 
 ==+== E. Comments for PC
 ==-== Hidden from authors.
 
 ==+== Scratchpad (for unsaved private notes)
 
+It is a poor workman who blames his tools - the good man gets on with $
+the job, given what he's got, and gets the best answer he can
+
+ The struggle to make something of yourself seems to be 
+worthwhile in itself
+
+Embrace your environement, however it impacts you, and get the best out of it
+
+know your weaknesses, the strength
+
+conforisming can go a long way
+difference between good work and first class work
+
+dont be a back room scientist
+
+stad on the shoulders of giants
 ==+== End Review
