--- a/paper_reviews/#14.md
+++ b/paper_reviews/#14.md
@@ -9,12 +9,12 @@
 
 ==+== Paper Number
 
-13
+14
 
 ==+== Review Readiness
 ==-== Enter "Ready" if the review is ready for others to see:
 
-()
+Ready
 
 ==+== A. Overall merit
 ==-== Choices:
