Ready state for submissions

--- a/paper_reviews/#3.md
+++ b/paper_reviews/#3.md
@@ -14,6 +14,7 @@
 ==+== Review Readiness
 ==-== Enter "Ready" if the review is ready for others to see:
 
+Ready
 
 ==+== A. Overall merit
 ==-== Choices:
