--- a/paper_reviews/#10.md
+++ b/paper_reviews/#10.md
@@ -14,6 +14,8 @@
 ==+== Review Readiness
 ==-== Enter "Ready" if the review is ready for others to see:
 
+Ready
+
 ==+== A. Overall merit
 ==-== Choices:
 ==-==    1. Reject
