--- a/paper_reviews/#45.md
+++ b/paper_reviews/#45.md
@@ -41,7 +41,7 @@
 
 The main memory is nowadays shared by multiple cores and the physical memory is split across multiple memory controllers (MC) that all should service the applications loads and stores. The three main goals in designing memory controller's algorithms to service requests are (1) provide consistent performances regardless of workload (2) maximize instruction throughput and (3) minimize synchronization overhead across MCs.
 
-ATLAS can be summarized in the following way. First, the execution time is split into long quanta that correspond to a number of cycles each. Additionally, it introduces the concept of least-attained services (LAS). Every MC is responsible to compute its local LAS for each thread, which is how many times it served a memory request for a thread (higher ranked means less memory requests serviced for this thread). At the end of each quanta, every MC reports to a meta-controller the LAS for each thread. The meta-controller weights sums them and merges the previous ranking computed during the last quantum with the new ones. The final ranking of threads is sent back to the MCs for the next quantum. When choosing which request to handle, ATLAS follows a policy of least-attained thread first (rankings from the meta-controller), and then uses regular FR-FCFS. This allow for coordination across MCs that take into account the long-term memory intensity of each thread rather than a finer granularity. Additionally it services first the requests that have been outstanding for too long to prevent starvation.
+ATLAS can be summarized in the following way. First, the execution time is split into equally long equally quanta that correspond to a number of cycles. Additionally, it introduces the concept of least-attained services (LAS). Every MC is responsible to compute its local LAS for each thread, which is how many times it served a memory request for a thread (higher ranked means less memory requests serviced for this thread). At the end of each quanta, every MC reports to a meta-controller the LAS for each thread. The meta-controller weights sums them and merges the previous ranking computed during the last quantum with the new ones. The final ranking of threads is sent back to the MCs for the next quantum. When choosing which request to handle, ATLAS follows a policy of least-attained thread first (rankings from the meta-controller), and then uses regular FR-FCFS. This allow for coordination across MCs that take into account the long-term memory intensity of each thread rather than a finer granularity. Additionally it services first the requests that have been outstanding for too long to prevent starvation.
 
 Over a long period, ATLAS increases the computing units throughput by minimizing the amount of time spent stalling for memory requests. Compared to state of the art PAR-BS, FR-FCFS, FCFS (in decreasing performance order), ATLAS instruction throughput is always higher for any workload and the improvement should be even more noticeable as the number of MCs increase.
 
